Fixed a wrap issue on gallery

--- a/css/index.css
+++ b/css/index.css
@@ -243,11 +243,10 @@ img {
 .container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
 }
 .container div {
-  width: 33%;
-  height: 55vh;
+  max-width: 450px;
+  max-height: 450px;
   overflow: hidden;
 }
 .container div img {
