--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,10 +1,9 @@
 .container{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     div{
-        width: 33%;
-        height: 55vh; 
+        max-width: 450px;
+        max-height: 450px;
         overflow: hidden;
         img{
             width: 100%;
